# spaceToolsLib

./: .readthedocs.yaml  README.md  __init__.py  pyproject.toml  setup.py
Tools/: CDF_load.py  CDF_output.py  __init__.py  conversions.py  coordinates.py  diagnoistics.py  models.py  transforms.py
colorbars/: apl_rainbow_black0.py
docs/: conf.py  index.rst  notes_on_using_sphinx
docs/autosummary/: spaceToolsLib.CDF_load.rst  spaceToolsLib.colorbars.apl_rainbow_black0.rst  spaceToolsLib.colorbars.blue_green_White_yellow_red.rst  spaceToolsLib.colorbars.matlab_parula.rst  spaceToolsLib.colorbars.rst  spaceToolsLib.math.chiSquare.rst  spaceToolsLib.math.rst  spaceToolsLib.supportPackages.SSA_class.rst  spaceToolsLib.supportPackages.pymssa.mssa.rst  spaceToolsLib.supportPackages.pymssa.optimized.rst  spaceToolsLib.tools.CDF_output.rst  spaceToolsLib.tools.colors.rst  spaceToolsLib.tools.conversions.rst  spaceToolsLib.tools.diagnoistics.rst  spaceToolsLib.tools.epochTime.rst  spaceToolsLib.tools.interpolate.rst  spaceToolsLib.tools.rst  spaceToolsLib.tools.transforms.rst  spaceToolsLib.variables.exampleMissionAttributes.rst  spaceToolsLib.variables.fliers.rst  spaceToolsLib.variables.physicsVariables.rst  spaceToolsLib.variables.rst
math/: chiSquare.py  steradian.py
setupFuncs/: data_paths.py  setupSpacepy.py
src/: __init__.py
supportPackages/: SSA_class.py
tools/: CDF_load.py  CDF_output.py  __init__.py  colors.py  diagnoistics.py  filter.py  models.py  transforms.py
variables/: __init__.py  exampleMissionAttributes.py  fliers.py  physicsVariables.py
(+150 files in other folders)
